--- a/index.html
+++ b/index.html
@@ -1,78 +1,45 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Pesquisa</title>
 
-    <link href="https://widget-v3.web.app/css/app.css" rel="stylesheet">
-
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background: transparent;
-            font-family: Montserrat, sans-serif;
-        }
-
-        #widget-wrapper {
-            width: 100%;
-            max-width: 400px;
-            margin: 0 auto;
-        }
-
-        @media (max-width: 500px) {
-            #widget-wrapper {
-                max-width: 100% !important;
-            }
-            vue-widget {
-                width: 100% !important;
-            }
-        }
-    </style>
+  <link href="https://widget-v3.web.app/css/app.css" rel="stylesheet">
 </head>
-<body>
 
-<div id="widget-wrapper">
+<body style="margin:0; padding:0;">
+
+  <div id="widget-container">
     <vue-widget 
-        widget_position="top-right"
-        widget_title="feedback"
-        buttons="#092871"
-        width="100%"
-        height=""
-        text_buttons="#ffffff"
-        background="#092871"
-        texts="#fff"
-        timeout="0"
-        width_metric="percent"
-        survey_id="6914bb37e38d6a50891653c3"
-        close_button="true"
-        close_permanently="false"
-        response_background="#e9ecf1"
-        hidde_after_answer="false"
-        hidde_when_click_to_close="false"
-        response_font_color="#0a0a0a"
-        font_family="'Montserrat', sans-serif"
-        font_size="large"
-        text_props="{'bold':'false','italic':'false','underline':'false'}"
-        border_radius="0"
-        from='{"name": "", "email": "", "phone":""}'
-        is_to_post="true"
-        metadata="{}"
-    ></vue-widget>
-</div>
+      widget_position="top-right"
+      widget_title="feedback"
+      buttons="#092871"
+      width="400"
+      height=""
+      text_buttons="#ffffff"
+      background="#092871"
+      texts="#fff"
+      timeout="0"
+      width_metric="px"
+      survey_id="6914bb37e38d6a50891653c3"
+      close_button="true"
+      close_permanently="false"
+      response_background="#e9ecf1"
+      hidde_after_answer="false"
+      hidde_when_click_to_close="false"
+      response_font_color="#0a0a0a"
+      font_family="'Montserrat', sans-serif"
+      font_size="large"
+      text_props="{'bold':'false','italic':'false','underline':'false'}"
+      border_radius="0"
+      from='{"name": "", "email": "", "phone":""}'
+      is_to_post="true"
+      metadata='{}'
+    />
+  </div>
 
-<script src="https://widget-v3.web.app/js/app.js"></script>
-
-<script>
-    function openWidget() {
-        if (window.WidgetAPI && WidgetAPI.open) {
-            WidgetAPI.open();
-        } else {
-            setTimeout(openWidget, 200);
-        }
-    }
-    openWidget();
-</script>
+  <script src="https://widget-v3.web.app/js/app.js"></script>
 
 </body>
 </html>
